--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from checkpoint import checkpoint"
+    "from checkpoints import checkpoints"
    ]
   },
   {
@@ -39,7 +39,18 @@
    },
    "outputs": [],
    "source": [
-    "checkpoint.enable()"
+    "checkpoints.enable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "checkpoints.disable()"
    ]
   },
   {
